--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -31,6 +31,10 @@
   @extend .flex;
   @extend .layout-column;
   font-size: 2.5rem;
+
+  > i {
+    display: block;
+  }
 }
 .space-around {
   justify-content: space-around;
@@ -83,11 +87,6 @@
 .m-y-3 {
   margin: 3rem 0;
 }
-//@media (min-width: 768px) {
-//  .content-padding {
-//    padding: 0 2rem;
-//  }
-//}
 
 //About Page
 .about-page {
